--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <body bgcolor="blue" text= "white">
 <h1><center>my name is shaikh abdul raza</center></h1>
 <h2> i am student of computer engeneering </h2>
-<a href="/ProgressBar/progressbar.html">click here</a>
+
+<p>Click following link</p>
+<a href="/ProgressBar/progressbar.html
+">LEARN HTML</a>
+
+
+  
 </body>
 </html>
