--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <p>Click following link</p>
 <a href="/ProgressBar/progressbar.html
 ">LEARN HTML</a>
-
+<a href="/shaikhrazaweb/shaikhrazaweb.html
+">click here</a>
 
   
 </body>
