--- a/index.html
+++ b/index.html
@@ -12,4 +12,42 @@
 
   
 </body>
+   
+<head><title>website</title></head>
+<h1 style="color:red">RIZVI COLLEGE OF ENGINEERING <sup> 2019 </sup></h1><hr/>
+<body bgcolor="grey" text="black">
+<style>
+header{
+      bgcolor:steelblue;
+      color:white;
+      text-align;center;
+      padding:10px;
+}
+nav {
+    bgcolor:red;
+    color:white;
+    float:left;
+    padding:5px;
+}
+div {
+    width:35px;
+    heaight:5px;
+    background-color:black;
+    margin:6px 0;
+}
+</style>
+
+<header>
+<h2>INSTRUCTION</h2>
+</header>
+<nav>
+COMPUTER<br>
+CIVIL<br>
+MECHENICAL<br>
+</nav>
+
+<h3> MENU ICON </h3>
+<div></div>
+<div></div>
+<div></div>
 </html>
