--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 ">click here</a>
 
   
+  <a href="/project1/raza.html">my first project</a>
+  
 </body>
    
 <head><title>website</title></head>
