--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head><title>my web page</title></head>
-<body bgcolor="blue" text= "white">
+<body bgcolor="3fff8dc" text= "white">
 <h1><center>my name is shaikh abdul raza</center></h1>
 <h2> i am student of computer engeneering </h2>
 
