--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 ">click here</a>
 
   
-  <a href="/project1/raza.html">my first project</a>
+  <br> <a href="/project1/raza.html">my first project</a></br>
   
 </body>
    
