--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>Click following link</p>
 <a href="/ProgressBar/progressbar.html
 ">LEARN HTML</a>
-<a href="/shaikhrazaweb/shaikhrazaweb.html
+<a href="/shaikhrazaweb.html
 ">click here</a>
 
   
