--- a/project1/top.html
+++ b/project1/top.html
@@ -5,7 +5,7 @@
 <h2><mark>componenets used in project </mark></h2>
 <ul>
 <li>B547 transistor  3</li>
-<li>mic condensor </lli>
+<li>mic condensor </li>
 <li>680 ohms resistor 2</li>
 <li>1k resistor 3</li>
 </ul>
