--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 ">LEARN HTML</a>
 <a href="/shaikhrazaweb.html
 ">click here</a>
+  
+  <a href="/abdulraza.html
+">project 2</a>
 
   
   <br> <a href="/project1/raza.html">my first project</a></br>
