--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<meta name="google-site-verification" content="SQWa6k7QD0gg0sY-5VjbVSh7qcHITktDPWFTSjrI1Yg" />
-
-
 <html>
-<head><title>my web page</title></head>
+<head><meta name="google-site-verification" content="SQWa6k7QD0gg0sY-5VjbVSh7qcHITktDPWFTSjrI1Yg" /><title>my web page</title></head>
 <body bgcolor="3fff8dc" text= "white">
 <h1><center>my name is shaikh abdul raza</center></h1>
 <h2> i am student of computer engeneering </h2>
