--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 
 <p>Click following link</p>
 <a href="/ProgressBar/progressbar.html
-">LEARN HTML</a>
+">LEARN HTML</a><br>
 <a href="/shaikhrazaweb.html
-">click here</a>
+">click here</a><br>
+  
   
   <a href="/abdulraza.html
-">project 2</a>
+">project 2</a><br>
 
   
   <br> <a href="/project1/raza.html">my first project</a></br>
