--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 ">project 2</a><br>
 
   
-  <br> <a href="/project1/raza.html">my first project</a></br>
+  <a href="/project1/raza.html">my first project</a></br>
   
 </body>
    
