--- a/abdulraza.html
+++ b/abdulraza.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> web page </title>
+<title> page </title>
 <style>
 #header {
     background-color:steelblue;
@@ -14,7 +14,7 @@
      height:350px;
      width:110px;
      float:left;
-    padding:5px;
+      padding:5px;
 }
 #section {
    width:350;
