--- a/abdulraza.html
+++ b/abdulraza.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <div id="header">
-   <h1> DOOR LOCK SYSTEM WITH ARDUINO <sub>project</sub> </h1>
+   <h1>C PROGRAMMING <sub>ANSI C </sub> </h1>
    </div>
    <div id="nav">
    <h2>components</h2>
