--- a/abdulraza.html
+++ b/abdulraza.html
@@ -35,13 +35,12 @@
    <div id="nav">
    <h2>components</h2>
    <ol>
-   <li>Arduino</li>
-   <li>4*4keypad</li>
-   <li>LCD</li>
-   <li>DC Lock</li>
-   <li>Relay</li>
-   <li>9V Battery</li>
-   <li>10K patentiometer</li
+   <li>Module 1: Introduction & Fundamentals of C Programming</li>
+   <li>Module 2: Control Structures & Looping</li>
+   <li>Module 3: Functions</li>
+   <li>Module 4: Arrays and Strings</li>
+   <li>Module 5: Structure and Union</li>
+   <li>Module 6: Pointers</li>
    </ol>
    </div>
    <div id="section">
