--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta name="google-site-verification" content="SQWa6k7QD0gg0sY-5VjbVSh7qcHITktDPWFTSjrI1Yg" /><title>my web page</title></head>
 <body bgcolor="3fff8dc" text= "white">
-<h1><center>my name is shaikh abdul raza</center></h1>
+<h1><center>DO YOU HAVE TO LEARN  C PROGRAMMING </center></h1>
 <h2> i am student of computer engeneering </h2>
 
 <p>Click following link</p>
