--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 
 <p>Click following link</p>
   
-<a href="/ProgressBar/progressbar.html
-">LEARN HTML</a><br>
+<a href="/ProgressBar/progressbar.html">LEARN HTML</a><br>
   
-<a href="/shaikhrazaweb.html
-">click here</a><br>
+<a href="/shaikhrazaweb.html">click here</a><br>
   
   
-  <a href="/abdulraza.html
-">project 2</a><br>
+  <a href="/abdulraza.html">project 2</a><br>
 
   
   <a href="/project1/raza.html">my first project</a></br>
@@ -26,7 +23,7 @@
 <body bgcolor="grey" text="black">
 <style>
 header{
-      bgcolor:steelblue;
+      bgcolor:blue;
       color:white;
       text-align;center;
       padding:10px;
