--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ COMPUTER<br>
 CIVIL<br>
 MECHENICAL<br>
 </nav>
+  </div>
+   <div id="footer">
+   <marquee behavior="scroll" direction="left"> PRESENTED  BY  SHAIKH   ABDUL  RAZA </maequee>
+   </div>
 <div></div>
 <div></div>
 <div></div>
