--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@ div {
     background-color:black;
     margin:6px 0;
 }
+  #footer {
+     background-color:green;
+     color:white;
+     clear:both;
+     text-align:center;
+     padding:5px;
 </style>
 
 <header>
