--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<head><meta name="google-site-verification" content="SQWa6k7QD0gg0sY-5VjbVSh7qcHITktDPWFTSjrI1Yg" /><title>my web page</title></head>
+<head>
+<title>my web page</title></head>
 <body bgcolor="3fff8dc" text= "white">
 <h1><center>DO YOU HAVE TO LEARN  C PROGRAMMING </center></h1>
 <h2> i am student of computer engeneering </h2>
@@ -45,7 +46,7 @@ div {
      color:white;
      clear:both;
      text-align:center;
-     padding:50px;
+     padding:5px;
 </style>
 
 <header>
