--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ div {
     background-color:black;
     margin:6px 0;
 }
+  #section {
+   width:350;
+   padding:10px;
+}
   #footer {
      background-color:green;
      color:white;
