--- a/index.html
+++ b/index.html
@@ -1,69 +1,30 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>my web page</title></head>
-<body bgcolor="3fff8dc" text= "white">
-<h1><center>DO YOU HAVE TO LEARN  C PROGRAMMING </center></h1>
-<h2> i am student of computer engeneering </h2>
-
-<p>Click following link</p>
-  
-<a href="/ProgressBar/progressbar.html">LEARN HTML</a><br>
-  
-<a href="/shaikhrazaweb.html">click here</a><br>
-  
-  
-  <a href="/abdulraza.html">project 2</a><br>
-
-  
-  <a href="/project1/raza.html">my first project</a></br>
-  
-
-   
-<head><title>website</title></head>
-<h1 style="color:red">RIZVI COLLEGE OF ENGINEERING <sup> 2019 </sup></h1><hr/>
-<body bgcolor="grey" text="black">
-<style>
-header{
-      bgcolor:blue;
-      color:white;
-      text-align;center;
-      padding:10px;
-}
-nav {
-    bgcolor:red;
-    color:white;
-    float:left;
-    padding:5px;
-}
-div {
-    width:35px;
-    heaight:5px;
-    background-color:black;
-    margin:6px 0;
-}
-  #section {
-   width:350;
-   padding:10px;
-}
-  #footer {
-     background-color:green;
-     color:white;
-     clear:both;
-     text-align:center;
-     padding:5px;
-</style>
-
+<title>C PROGRAMMING</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
 <header>
-<h2>INSTRUCTION</h2>
+<div class="main">
+
+<ul>
+<li class="active"><a href="#">Home</a></li>
+<li><a href="#">Services</a></li>
+
+<li><a href="#">Gallery</a></li>
+
+<li><a href="#">About</a></li>
+
+<li><a href="#">Contact</a></li>
+</ul>
+</div>
+<div class="title">
+<h1>C PROGRAMMING</h1>
+</div>
+
+
+
 </header>
-<nav>
-COMPUTER<br>
-CIVIL<br>
-MECHENICAL<br>
-</nav>
-  </div>
-   <div id="footer">
-   <marquee behavior="scroll" direction="left"> PRESENTED  BY  SHAIKH   ABDUL  RAZA </maequee>
-   </div>
-  </body>
+</body>
 </html>
