--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ ul li.active a{
 	
 }
 
-.title h1{
+.title h2{
 	color: #fff;
 	font-size: 70px;
 
@@ -86,7 +86,8 @@ ul li.active a{
 </ul>
 </div>
 <div class="title">
-<h1>C PROGRAMMING</h1>
+	<h1> DO YOU HAVE TO LEARN <h1>
+<h2>C PROGRAMMING</h2>
 </div>
 
 
