--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@ ul li.active a{
 	margin:auto;
 	
 }
+	.raza{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	
+}
+
+.title h1{
+	color: #fff;
+	font-size: 40px;
+
+
+
+
+}
+	
+	
 
 .title{
 	position: absolute;
@@ -58,7 +76,7 @@ ul li.active a{
 	
 }
 
-.title h1,h2{
+.title h2{
 	color: #fff;
 	font-size: 70px;
 
@@ -66,6 +84,8 @@ ul li.active a{
 
 
 }
+	
+	
 </style>
 <title>C PROGRAMMING</title>
 
@@ -85,8 +105,13 @@ ul li.active a{
 <li><a href="#">Contact</a></li>
 </ul>
 </div>
-<div class="title">
+	<div class="raza">
 	<h1> DO YOU HAVE TO LEARN <h1>
+
+</div>
+
+<div class="title">
+	
 <h2>C PROGRAMMING</h2>
 </div>
 
