--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ ul li.active a{
 	margin:auto;
 	
 }
-	.raza{
+.raza{
 	position: absolute;
 	top: 40%;
 	left: 40%;
@@ -58,7 +58,7 @@ ul li.active a{
 }
 
 .title h1{
-	color: #ffffff;
+	color: #fff;
 	font-size: 40px;
 
 
