--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ ul li.active a{
 	margin:auto;
 	
 }
-.raza{
+.title1{
 	position: absolute;
 	top: 40%;
 	left: 40%;
@@ -57,7 +57,7 @@ ul li.active a{
 	
 }
 
-.title h1{
+.title1 h1{
 	color: #fff;
 	font-size: 40px;
 
@@ -69,7 +69,7 @@ ul li.active a{
 	
 	
 
-.title{
+.title2{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -77,7 +77,7 @@ ul li.active a{
 	
 }
 
-.title h2{
+.title2 h2{
 	color: #fff;
 	font-size: 70px;
 
@@ -106,12 +106,12 @@ ul li.active a{
 <li><a href="#">Contact</a></li>
 </ul>
 </div>
-	<div class="raza">
-	<h1> DO YOU HAVE TO LEARN <h1>
+<div class="title1">
+<h1> DO YOU HAVE TO LEARN <h1>
 
 </div>
 
-<div class="title">
+<div class="title2">
 	
 <h2>C PROGRAMMING</h2>
 </div>
