--- a/index.html
+++ b/index.html
@@ -115,9 +115,12 @@ ul li.active a{
 	
 <h2>C PROGRAMMING</h2>
 </div>
-
+ <div id="footer">
+   <marquee behavior="scroll" direction="left"> PRESENTED  BY  SHAIKH   ABDUL  RAZA </maequee>
+   </div>
 
 
 </header>
+	
 </body>
 </html>
