--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ ul li.active a{
 	
 }
 .title1{
-	position: middle;
+	position: absolute;
 	top: 40%;
 	left: 50%;
 	transform: translate(-40%,-50%);
