--- a/index.html
+++ b/index.html
@@ -49,27 +49,11 @@ ul li.active a{
 	margin:auto;
 	
 }
-.title1{
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	transform: translate(-40%,-50%);
-	
-}
 
-.title1 h1{
-	color: #fff;
-	font-size: 40px;
-
-
-
-
-
-}
 	
 	
 
-.title2{
+.title{
 	position: absolute;
 	top: 60%;
 	left: 50%;
@@ -77,7 +61,7 @@ ul li.active a{
 	
 }
 
-.title2 h2{
+.title h1{
 	color: #fff;
 	font-size: 70px;
 
@@ -106,14 +90,11 @@ ul li.active a{
 <li><a href="#">Contact</a></li>
 </ul>
 </div>
-<div class="title1">
-<h1> DO YOU HAVE TO LEARN <h1>
 
-</div>
 
-<div class="title2">
+<div class="title">
 	
-<h2>C PROGRAMMING</h2>
+<h1>C PROGRAMMING</h1>
 </div>
  <div id="footer">
    <marquee behavior="scroll" direction="left"> PRESENTED  BY  SHAIKH   ABDUL  RAZA </maequee>
