--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ul li.active a{
 
 .title{
 	position: absolute;
-	top: 60%;
+	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	
@@ -96,6 +96,9 @@ ul li.active a{
 	
 <h1>C PROGRAMMING</h1>
 </div>
+ <div id="footer">
+   <marquee behavior="scroll" direction="left"> PRESENTED  BY  SHAIKH   ABDUL  RAZA </maequee>
+   </div>
 
 
 </header>
