--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ ul li.active a{
 	
 <h1>C PROGRAMMING</h1>
 </div>
- <div id="footer">
+ <div id="bottom">
    <marquee behavior="scroll" direction="left"> PRESENTED  BY  SHAIKH   ABDUL  RAZA </maequee>
    </div>
 
