--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@ ul li.active a{
 
 
 }
-	
+#bottom {
+     background-color:green;
+     color:white;
+     clear:both;
+     text-align:center;
+     padding:5px;
+}
 	
 </style>
 <title>C PROGRAMMING</title>
