--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ ul li.active a{
 
 }
 #bottom {
-     background-color:green;
+     background-color:dodgerblue;
      color:white;
      clear:both;
      text-align:center;
