--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ ul li.active a{
      clear:both;
      text-align:center;
      padding:5px;
+	position: absolute;
+	top: 95%;
+	transform: translate(-50%,-50%);
+	
 }
 	
 </style>
