--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@ ul li.active a{
 
 }
 #bottom {
-     background-color:darkblue;
-     color:white;
+     background-color:white;
+     color:darkpink;
      clear:both;
      text-align:center;
      padding:5px;
      position: absolute;
-     top: 98%;
-     transform: translate(-50%,-50%);
+     top: 97%;
+    
 	
 }
 	
