--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@ ul li.active a{
 }
 #bottom {
      background-color:white;
-     color:darkpink;
+     color:black;
      clear:both;
      text-align:center;
      padding:5px;
-     position: absolute;
+     position:none;
      top: 97%;
     
 	
