--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ ul li.active a{
      clear:both;
      text-align:center;
      padding:5px;
-     position:none;
+     position:bottom;
      top: 97%;
     
 	
