--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ ul li.active a{
      padding:5px;
      position:absolute;
      top: 95%;
-     left:none;
-     right:none;
+     left:100%;
+     right:100%;
     
 	
 }
