--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@ ul li.active a{
      padding:5px;
      position:absolute;
      top: 95%;
-     left:100%;
-     right:100%;
+    
     
 	
 }
@@ -93,11 +92,11 @@ ul li.active a{
 
 <ul>
 <li class="active"><a href="#">Home</a></li>
-<li><a href="#">Services</a></li>
+<li><a href="#">Content</a></li>
 
-<li><a href="#">Gallery</a></li>
+<li><a href="#">Module</a></li>
 
-<li><a href="#">About</a></li>
+<li><a href="#">Practice Question</a></li>
 
 <li><a href="#">Contact</a></li>
 </ul>
