--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ ul li.active a{
 
 <li><a href="#">Contact</a></li>
 </ul>
+	
 </div>
+	<p>DO YOU HAVE TO LEARN C PROGRAMMING THEN FOLLOW THIS WEBSITE </P> 
 
 
 <div class="title">
