--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ ul li.active a{
     
 	
 }
+.raza{
+	color: #fff;
+	font-size: 35px;
+}
 	
 </style>
 <title>C PROGRAMMING</title>
@@ -99,7 +103,7 @@ ul li.active a{
 </ul>
 	
 </div>
-	<p>DO YOU HAVE TO LEARN C PROGRAMMING THEN FOLLOW THIS WEBSITE </P> 
+	<p class="raza">DO YOU HAVE TO LEARN C PROGRAMMING THEN FOLLOW THIS WEBSITE </P> 
 
 
 <div class="title">
