--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@ ul li.active a{
 	color: #fff;
 	font-size: 20px;
 	font-family:italy;
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-40%,-50%);
+	
 }
 	
 </style>
