--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ ul li.active a{
 	font-family:italy;
 	position: absolute;
 	top: 40%;
-	left: auto;
+	left: 45%;
 	transform: translate(-50%,-50%);
 	
 }
