--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ ul li.active a{
 .raza{
 	color: #fff;
 	font-size: 20px;
-	font-family:Arial Black;
+	font-family:franklin Gothic Medium;
 	position: absolute;
 	top: 40%;
 	left: 45%;
