--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ ul li.active a{
 
 <ul>
 <li class="active"><a href="#">Home</a></li>
-<li><a href="#">Content</a></li>
+<li><a href="#content.html">Content</a></li>
 
 <li><a href="#">Module</a></li>
 
