--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ ul li.active a{
 
 <li><a href="#">Practice Question</a></li>
 
-<li><a href="#">Contact</a></li>
+<li><a href="contact.html">Contact</a></li>
 </ul>
 	
 </div>
