--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 }
 .active {
   	font-size:3px;
-    background-color:#AFEEEE;
+    background-color:#fff;
     height:0%;
     width:100%;
     top: 60%;
@@ -39,7 +39,7 @@
 }
 
 </style>
-<body bgcolor="#AFEEEE" text="blue" >
+<body bgcolor="#fff" text="blue" >
     <div id="nav">
 
  <h1 ><br><center>CONTACT :</center></h1>
