--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <style>
 
 #footer {
-     background-color:royalblue;
+     background-color:steelblue;
      color:white;
      clear:both;
      text-align:center;
@@ -39,7 +39,7 @@
 }
 
 </style>
-<body bgcolor="#fff" text="blue" >
+<body bgcolor="#fff" text="steelblue" >
     <div id="nav">
 
  <h1 ><br><center>CONTACT :</center></h1>
