--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 
 
  <div id="footer">
-   <marquee behavior="scroll" direction="left"> CONFIGURED  AND  MAINTAINED  BY   SHAIKH    ABDUL   RAZA   STUDENT  OF  RIZVI  COLLEGE  OF  ENGENEERING <sub>2020</sub></maequee>
+   <marquee behavior="scroll" direction="left"> CONFIGURED  AND  MAINTAINED  BY   SHAIKH    ABDUL   RAZA   STUDENT  OF  RIZVI  COLLEGE  OF  ENGINEERING <sub>2020</sub></maequee>
    </div>
    
   </body>   
