--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ ul li.active a{
 
 <ul>
 <li class="active"><a href="#">Home</a></li>
-<li><a href="#content.html">Content</a></li>
+<li><a href="content.html">Content</a></li>
 
 <li><a href="#">Module</a></li>
 
 <li><a href="#">Practice Question</a></li>
 
-<li><a href="#contact.html">Contact</a></li>
+<li><a href="contact.html">Contact</a></li>
 </ul>
 	
 </div>
