--- a/content.html
+++ b/content.html
@@ -58,7 +58,7 @@
 
 .bottom{
      background-color:steelblue;
-     color:red;
+     color:white;
      text-align:center;
      padding:10px;
      position:absolute;
