--- a/content.html
+++ b/content.html
@@ -59,14 +59,15 @@
 #bottom{
      background-color:steelblue;
      color:white;
+     clear:both;
      text-align:center;
      padding:10px;
-     position:absolute;
-     top: 95%;
-     font-family:Arial Black;
-    
-    
-	
+     position: absolute;
+	 top: 90%;
+	 left: 0%;
+     right:0%;
+	transform: translate(-0%,-0%);
+
 }
 </style>
 </head>
