--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@ ul li.active a{
 	transform: translate(-40%,-45%);
 	
 }
+.active2{
+	color:#fff;	
+	
+	
+	
+	
+}
 	
 </style>
 <title>C PROGRAMMING</title>
