--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@ ul li.active a{
 	transform: translate(-40%,-45%);
 	
 }
-.active2{
-	color:#fff;	
+.active2{	
+	text-decoration: none;
+	color: #fff;
+	padding: 5px 20px;
+	border: 1px solid transparent;
+	transition: 0.6s ease;
+}
+
 	
 	
 	
