--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@ ul li.active a{
 	transform: translate(-40%,-45%);
 	
 }
-.active2{	
+
+ul{
+	float: right;
+	list0-style-type:none;
+	margin-top:25px;
+}
+
+ul li {
+	display:inline-block;
+}
+
+ul li a{
 	text-decoration: none;
 	color: #fff;
 	padding: 5px 20px;
@@ -85,11 +96,22 @@ ul li.active a{
 	transition: 0.6s ease;
 }
 
-	
-	
-	
-	
+ul li a:hover{
+	background-color: #fff;
+	color:#000;
 }
+ul li.active2 a{
+	background-color: #fff;
+	color:#000;
+}
+
+
+
+	
+	
+	
+	
+
 	
 </style>
 <title>C PROGRAMMING</title>
@@ -111,6 +133,7 @@ ul li.active a{
 </ul>
 	
 </div>
+	
 	<p class="raza">DO YOU HAVE TO LEARN C PROGRAMMING THEN FOLLOW THIS WEBSITE </P> 
 
 
@@ -118,7 +141,8 @@ ul li.active a{
 	
 <h1>C PROGRAMMING</h1>
 </div>
-	<P class="active2"><b>NEXT </b></p>
+	<ul>
+	<li class="active2"><a href="contact.html">NEXT</a></li>
 </header>
 	
 	
