--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@ ul li a{
 	transition: 0.6s ease;
 }
 
-ul li a:hover{
-	background-color: #fff;
-	color:#000;
-}
+
+
 ul li.active2 a{
 	background-color: #fff;
 	color:#000;
@@ -142,7 +140,7 @@ ul li.active2 a{
 <h1>C PROGRAMMING</h1>
 </div>
 	<ul>
-	<li class="active2"><a href="contact.html">NEXT</a></li>
+	<li class="active2"><a href="content.html">NEXT</a></li>
 </header>
 	
 	
