--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ ul li a{
 <li class="active"><a href="#">Home</a></li>
 <li><a href="content.html">Content</a></li>
 
-<li><a href="#">Module</a></li>
+<li><a href="module.html">Module</a></li>
 
 <li><a href="#">Practice Question</a></li>
 
