--- a/module1.html
+++ b/module1.html
@@ -38,7 +38,15 @@
 
 }
 
+.raza{
+		top:20%;
+        left:50%;
+        transform: translate(+20%,+100%);
+        width:20%;
+        
+       
 
+}
 
 
 
@@ -63,7 +71,13 @@
    <p class="active2"><a href="content.html">Module 6 <br></a> </p><li>Pointers</li>
    </ul>
    </div>
+
+
+
+     <div class="raza">
    <img src="abcd.jpg" alt="image">
+  
+   </div>
   
    
    </body>
