--- a/module1.html
+++ b/module1.html
@@ -39,8 +39,8 @@
 }
 
 .raza{
-	top:20%;
-        left:500%;
+	top:20px;
+        left:500px;
         transform: translate(+20%,+100%);
         width:20%;
         
