--- a/module1.html
+++ b/module1.html
@@ -43,6 +43,9 @@
         left:50px;
         transform: translate(+20%,+10%);
         width:20%;
+	max-width: 120px;
+	margin:auto;
+	
         
        
 
