--- a/module1.html
+++ b/module1.html
@@ -42,9 +42,9 @@
 	top:0px;
         left:50px;
         transform: translate(+0%,+0%);
-        width:20%;
+        width:0%;
 	max-width: 120px;
-	margin:auto;
+	margin:10px;
 	
         
        
