--- a/module1.html
+++ b/module1.html
@@ -78,7 +78,7 @@
 
 
      <div class="raza">
-   <img src="abcd.jpg" alt="image" width="20%">
+   <img src="abcd.jpg" alt="image" width="50%" align="left">
   
    </div>
   
