--- a/module1.html
+++ b/module1.html
@@ -42,7 +42,6 @@
 	top:0px;
         left:50px;
         transform: translate(+0%,+0%);
-        width:0%;
 	max-width: 0px;
 	margin:1px;
 	
@@ -78,7 +77,7 @@
 
 
      <div class="raza">
-   <img src="abcd.jpg" alt="image" width="50%" align="left">
+   <img src="abcd.jpg" alt="image" style="width:500px;height:600px;">
   
    </div>
   
