--- a/module1.html
+++ b/module1.html
@@ -44,7 +44,8 @@
         transform: translate(+0%,+0%);
 	max-width: 0px;
 	margin:1px;
-	
+	width:500px;
+	height:600px;
         
        
 
@@ -77,7 +78,7 @@
 
 
      <div class="raza">
-   <img src="abcd.jpg" alt="image" style="width:500px;height:600px;">
+   <img src="abcd.jpg" alt="image" >
   
    </div>
   
