--- a/module1.html
+++ b/module1.html
@@ -44,8 +44,8 @@
         transform: translate(+0%,+0%);
 	max-width: 0px;
 	margin:1px;
-	width:500px;
-	height:600px;
+	width:50%;
+	height:100%;
         
        
 
