--- a/module1.html
+++ b/module1.html
@@ -50,6 +50,15 @@
        
 
 }
+	
+	.abdul{
+		top:10px;
+		align;70%;
+		font-color:red;
+	
+	
+	
+	}
 
 
 
@@ -74,8 +83,11 @@
    <p class="active2"><a href="content.html">Module 6 <br></a> </p><li>Pointers</li>
    </ul>
    </div>
-
+<div class="abdul">
 <h1>Basic Concept Of C Programming</h1>
+	 </div>
+  
+	
 
      <div class="raza">
    <img src="abdul.jpg" alt="image" >
