--- a/module1.html
+++ b/module1.html
@@ -37,6 +37,15 @@
 
 
 }
+	
+.abdul{
+	top:10px;
+	align:70%;
+	color:red;
+	
+	
+	
+	}
 
 .raza{
 	top:0px;
@@ -51,14 +60,6 @@
 
 }
 	
-	.abdul{
-		top:10px;
-		align;70%;
-		font-color:red;
-	
-	
-	
-	}
 
 
 
