--- a/module1.html
+++ b/module1.html
@@ -8,7 +8,7 @@
 
 #nav {
 
-        background-color:white;
+        background-color:yellow;
         height:350px;
         width:30%;
         float:left;
