--- a/module1.html
+++ b/module1.html
@@ -8,8 +8,8 @@
 
 #nav {
 
-        background-color:yellow;
-        height:auto;
+        background-color:#fff;
+        height:400px;
         width:30%;
         float:left;
         padding:0px; 
