--- a/module1.html
+++ b/module1.html
@@ -85,7 +85,8 @@
    </ul>
    </div>
 <div class="abdul">
-<h1>Basic Concept Of C Programming</h1>
+	<h1>Module 1</h1>
+<h2>Basic Concept Of C Programming</h2>
 	 </div>
   
 	
