--- a/module1.html
+++ b/module1.html
@@ -8,7 +8,7 @@
 
 #nav {
 
-        background-color:#fff;
+        background-color:azure;
         height:400px;
         width:30%;
         float:left;
