--- a/module1.html
+++ b/module1.html
@@ -9,7 +9,7 @@
 #nav {
 
         background-color:azure;
-        height:400px;
+        height:100%;
         width:30%;
         float:left;
         padding:0px; 
