--- a/module1.html
+++ b/module1.html
@@ -12,7 +12,7 @@
         height:100%;
         width:30%;
         float:left;
-        padding:10px; 
+        padding:5%; 
         top:0%;
         left:0%;
         transform: translate(-0%,-16%);
