--- a/module1.html
+++ b/module1.html
@@ -60,8 +60,12 @@
 
 }
 	
-
-
+.abcd{
+	color:black;
+	
+	
+	
+}
 
 
 
@@ -87,9 +91,9 @@
 <div class="abdul">
 	<h1>Module 1</h1>
 <ul>
-	<li><b>Introduction</b></li><br>
+	<li class="abcd"><b>Introduction</b></li><br>
 	
-	<p>C is a procedural programming language. It was initially developed by Dennis Ritchie in the year 1972. It was mainly developed as a system programming language to write an operating system. The main features of C language include low-level access to memory, a simple set of keywords, and clean style, these features make C language suitable for system programmings like an operating system or compiler development.<br>
+	<p class="active2">C is a procedural programming language. It was initially developed by Dennis Ritchie in the year 1972. It was mainly developed as a system programming language to write an operating system. The main features of C language include low-level access to memory, a simple set of keywords, and clean style, these features make C language suitable for system programmings like an operating system or compiler development.<br>
 Many later languages have borrowed syntax/features directly or indirectly from C language. Like syntax of Java, PHP, JavaScript, and many other languages are mainly based on C language. C++ is nearly a superset of C language (There are few programs that may compile in C, but not in C++).
 
 </p>
