--- a/module1.html
+++ b/module1.html
@@ -19,6 +19,22 @@
 		color:steelblue;
 
 }
+	
+	
+	
+	
+	
+	
+	
+	
+	
+#header {
+    background-color:steelblue;
+    color:white;
+      text-align:center;
+     padding:5px;
+}
+
  .active{
 		color:red;
         font-size:40px;
@@ -96,7 +112,7 @@
    <p class="active2"><a href="content.html">Module 6 <br></a> </p><li>Pointers</li>
    </ul>
    </div>
-<div class="abdul">
+<div id="header">
 	<h1>Module 1</h1>
 <ul>
 	<li class="abcd"><b>Introduction</b></li><br>
