--- a/module1.html
+++ b/module1.html
@@ -12,10 +12,10 @@
         height:100%;
         width:30%;
         float:left;
-        padding:20px; 
+        padding:30px; 
         top:0%;
         left:0%;
-        transform: translate(-0%,-16%);
+        transform: translate(-10%,-16%);
 		color:steelblue;
 
 }
@@ -29,10 +29,10 @@
 	
 	
 #header {
-    background-color:steelblue;
-    color:white;
-      text-align:center;
-     padding:5px;
+    background-color:#fff;
+    color:steelblue;
+    text-align:center;
+    padding:5px;
 }
 
  .active{
