--- a/module1.html
+++ b/module1.html
@@ -9,7 +9,7 @@
 #nav {
 
         background-color:azure;
-        height:200%;
+        height:auto;
         width:30%;
         float:left;
         padding:30px; 
