--- a/module1.html
+++ b/module1.html
@@ -10,7 +10,7 @@
 
         background-color:azure;
         height:auto;
-        width:30%;
+        width:25%;
         float:left;
         padding:30px; 
         top:0%;
@@ -32,8 +32,11 @@
     background-color:#fff;
     color:steelblue;
     padding:5px;
-	width:70%;
+    width:70%;
+	
+	 float:auto;
 }
+	
 
  .active{
 	color:red;
