--- a/module1.html
+++ b/module1.html
@@ -132,7 +132,7 @@ Many later languages have borrowed syntax/features directly or indirectly from C
 	
 	
 	
-	<li></b>Introduction to components of a Computer System</b></li><br>
+	<li><b>Introduction to components of a Computer System</b></li><br>
 <p class="ab">
 The main components of the computer system and its function are Processor Main memory Additional memory Input devices Output devices, the processor, auxiliary memory, power supply, and auxiliary equipment. Many components are connected to the main computer board, called the motherboard.
 
