--- a/module1.html
+++ b/module1.html
@@ -105,8 +105,8 @@
    <p class="active">MODULES<br></p>
    <ul><br>
    <p class="active2">
-	   
-   Module 1<br></p>               
+	   <a name="Module1"></a>
+   <a href="#Module1">Module 2<br></a></p>               
 	   <li>Introduction & Fundamentals of C Programming<//li>
    
    
