--- a/module1.html
+++ b/module1.html
@@ -165,7 +165,7 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 	
 	</ul>
 	 </div>
-  
+  <img src="flow.jpg" alt="image" >
 	
 
      <div class="raza">
