--- a/module1.html
+++ b/module1.html
@@ -92,9 +92,12 @@
 	
 	
 	
-	}
-
-
+	
+	
+}
+.flow{
+	width:30%;
+	height:50%;
 
 
 </style>
@@ -164,9 +167,10 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 	
 	
 	</ul>
-	 </div>
+	 </div>\
+	<div class="flow">
   <img src="flow1.jpg" alt="image" >
-	
+	</div>
 
      <div class="raza">
    <img src="abdul.jpg" alt="image" >
