--- a/module1.html
+++ b/module1.html
@@ -73,7 +73,7 @@
 	max-width: 0px;
 	margin:1px;
 	width:30%;
-	height:80%;
+	height:auto;
         
        
 
@@ -97,7 +97,7 @@
 }
 .flow{
 	width:30%;
-	height:50%;
+	height:8%;
 
 
 </style>
