--- a/module1.html
+++ b/module1.html
@@ -70,12 +70,12 @@
 	top:20%;
         left:50px;
         transform: translate(+10%,+10%);
-	max-width: 0px;
+	max-width: 10px;
 	margin:1px;
 	width:30%;
 	height:auto;
         
-       
+	
 
 }
 	
@@ -98,7 +98,9 @@
 .flow{
 	width:30%;
 	height:8%;
-
+       max-width: 120px;
+	margin:auto;
+}
 
 </style>
 </head>
