--- a/module1.html
+++ b/module1.html
@@ -150,7 +150,8 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 </p>
 
 	
-	
+	<li><b>Fundamentals of C Programming</b></li><br>
+	<p class="ab">The basic elements used to construct a simple C program are: the C character set, identifiers and keywords, data types, constants, arrays, declarations , expressions and statements. Let us see how these elements can be combined to form more comprehensive program components-</p>
 	
 	
 	
