--- a/module1.html
+++ b/module1.html
@@ -87,8 +87,9 @@
 .flow{
 	width:30%;
 	height:8%;
-       max-width: 120px;
+       max-width: 12px;
 	margin:auto;
+	float:left;
 }
 
 </style>
@@ -149,7 +150,11 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 
 </p>
 
-	
+	<div class="flow">
+  <img src="flow1.jpg" alt="image" >
+	</div>
+
+     
 	<li><b>Fundamentals of C Programming</b></li><br>
 	<p class="ab">The basic elements used to construct a simple C program are: the C character set, identifiers and keywords, data types, constants, arrays, declarations , expressions and statements. Let us see how these elements can be combined to form more comprehensive program components-</p>
 	
@@ -160,10 +165,7 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 	
 	</ul>
 	 </div>\
-	<div class="flow">
-  <img src="flow1.jpg" alt="image" >
-	</div>
-
+	
      
 	
 	
