--- a/module1.html
+++ b/module1.html
@@ -87,9 +87,14 @@
 .flow{
 	width:30%;
 	height:8%;
-       max-width: 12px;
+        max-width: 12px;
 	margin:auto;
 	float:left;
+	padding:0px; 
+        top:0%;
+        left:0%;
+        transform: translate(-10%,-16%);
+	
 }
 
 </style>
