--- a/module1.html
+++ b/module1.html
@@ -155,9 +155,9 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 
 </p>
 
-	<div class="flow">
-  <img src="flow1.jpg" alt="image" >
-	</div>
+	
+  <img src="flow1.jpg" alt="image" width="500px" height="300px"align="left">
+	
 
      
 	<li><b>Fundamentals of C Programming</b></li><br>
