--- a/module1.html
+++ b/module1.html
@@ -144,7 +144,7 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 </p>
 
 	
-  <img src="flow1.jpg" alt="image" width="300px" height="500px"align="left">
+  <img src="flow1.jpg" alt="image" width="300px" height="500px"align="right">
 	
 
      
