--- a/module1.html
+++ b/module1.html
@@ -144,7 +144,7 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 </p>
 
 	
-  <img src="flow1.jpg" alt="image" width="250px" height="600px"align="right">
+  <img src="flow1.jpg" alt="image" width="250px" height="600px"align="left" style="padding:10px";>
 	
 
      
