--- a/module1.html
+++ b/module1.html
@@ -90,7 +90,8 @@
 <body>
 
    <div id="nav">
-   <p class="active">MODULES<br></p>
+   <p class="active">  C PROGRMMING <br>
+	  MODULES<br></p>
    <ul><br>
    <p class="active2">
 	   <a name="Module1"></a>
