--- a/module1.html
+++ b/module1.html
@@ -145,7 +145,7 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 </p>
 
 	
-  <img src="flow1.jpg" alt="image" width="250px" height="600px"align="left" style="padding:0px";>
+  <img src="Doc1.jpg" alt="image" width="250px" height="600px"align="left" >
 	
 
      
