--- a/module1.html
+++ b/module1.html
@@ -114,7 +114,10 @@
 	<p class="ab">C is a procedural programming language. It was initially developed by Dennis Ritchie in the year 1972. It was mainly developed as a system programming language to write an operating system. The main features of C language include low-level access to memory, a simple set of keywords, and clean style, these features make C language suitable for system programmings like an operating system or compiler development.<br>
 Many later languages have borrowed syntax/features directly or indirectly from C language. Like syntax of Java, PHP, JavaScript, and many other languages are mainly based on C language. C++ is nearly a superset of C language (There are few programs that may compile in C, but not in C++).
 
-</p>
+</p> <img src="Doc2.jpg
+" alt="image" width="250px" height="600px"align="right" >
+	
+
 	
 	
 	
