--- a/module1.html
+++ b/module1.html
@@ -160,9 +160,36 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 	
 	
 	
+	<li><b>Keywords</b></li><br>
+	<p class="ab">   Keywords are predefined, reserved words used in programming that have special meanings to the compiler. Keywords are part of the syntax and they cannot be used as an identifier. For example:</p>
 	
+	
+	<br>
+	<p>int money;</p><br>
+	<p>	Here, int is a keyword that indicates money is a variable of type int (integer).<br>
+
+As C is a case sensitive language, all keywords must be written in lowercase. Here is a list of all keywords allowed in ANSI C.<br>
+
+C Keywords<br>
+auto   	double	int	struct
+break	else	long	switch
+case	enum	register	typedef
+char	extern	return	union
+continue	for	signed	void
+do	if	static	while
+default	goto	sizeof	volatile
+const	float	short	unsigned
+	
+	
+	
+	
+	
+	
+	
+	
+	</p>
 	</ul>
-	 </div>\
+	 </div>
 	
      
 	
