--- a/module1.html
+++ b/module1.html
@@ -171,15 +171,12 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 As C is a case sensitive language, all keywords must be written in lowercase. Here is a list of all keywords allowed in ANSI C.<br>
 
 C Keywords<br>
-auto   	double	int	struct
-break	else	long	switch
-case	enum	register	typedef
-char	extern	return	union
-continue	for	signed	void
-do	if	static	while
-default	goto	sizeof	volatile
-const	float	short	unsigned
+
+	 <img src="key.jpg
+" alt="image" width="600px" height="6
+				   250px"align="left" >
 	
+
 	
 	
 	
