--- a/module1.html
+++ b/module1.html
@@ -173,8 +173,7 @@ As C is a case sensitive language, all keywords must be written in lowercase. He
 C Keywords<br>
 
 	 <img src="key.png
-" alt="image" width="600px" height="6
-				   250px"align="left" >
+" alt="image" width="600px" height= 250px"align="left" >
 	
 
 	
