--- a/module1.html
+++ b/module1.html
@@ -170,7 +170,7 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 
 As C is a case sensitive language, all keywords must be written in lowercase. Here is a list of all keywords allowed in ANSI C.<br>
 
-C Keywords<br>
+C Keywords<br><br>
 
 	 <img src="key.png
 " alt="image" width="600px" height= 250px"align="left" >
