--- a/module1.html
+++ b/module1.html
@@ -165,8 +165,8 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 	
 	
 	<br>
-	<p>int money;</p><br>
-	<p>	Here, int is a keyword that indicates money is a variable of type int (integer).<br>
+	<p class="ab">int money;<br></p>
+	<p class="ab">Here, int is a keyword that indicates money is a variable of type int (integer).<br>
 
 As C is a case sensitive language, all keywords must be written in lowercase. Here is a list of all keywords allowed in ANSI C.<br>
 
