--- a/module1.html
+++ b/module1.html
@@ -153,14 +153,14 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 	
 
      
-	<li><b>Fundamentals of C Programming</b></li><br>
+	<li><b>Fundamentals of C Programming</b><br></li>
 	<p class="ab">The basic elements used to construct a simple C program are: the C character set, identifiers and keywords, data types, constants, arrays, declarations , expressions and statements. Let us see how these elements can be combined to form more comprehensive program components-</p>
 	
 	
 	
 	
 	
-	<li><b>Keywords</b></li><br>
+	<li><b>Keywords</b><br></li>
 	<p class="ab">   Keywords are predefined, reserved words used in programming that have special meanings to the compiler. Keywords are part of the syntax and they cannot be used as an identifier. For example:</p>
 	
 	
