--- a/module1.html
+++ b/module1.html
@@ -178,7 +178,7 @@ C Keywords<br><br>
 <li><b>Identifiers </b><br></li>
 	
 	<p class="ab">In C, C++, C# and other programming languages, an identifier is a name that is assigned by the user for a program element such as variable, type, template, class, function or namespace. It is usually limited to letters, digits, and underscores. ... Identifiers are used to identify a program element in the code<br></p>
-	 <img src="iden.jpg" alt="image" width="600px" height= 250px"align="left" >
+	 <img src="iden.jpg" alt="image" width="600px" height= 250px" align="right" >
 	
 	
 	
