--- a/module1.html
+++ b/module1.html
@@ -90,7 +90,7 @@
 <body>
 
    <div id="nav">
-   <p class="active"> C PROGRMMING <br>
+   <p class="active"> C PROGRAMMING <br>
 	  MODULES<br></p><br>
    <ul><br>
    <p class="active2">
