--- a/module1.html
+++ b/module1.html
@@ -8,7 +8,7 @@
 
 #nav {
 
-        background-color:azure;
+        background-color:steelblue;
         height:auto;
         width:25%;
         float:left;
