--- a/module1.html
+++ b/module1.html
@@ -8,7 +8,7 @@
 
 #nav {
 
-        background-color:steelblue;
+        background-color:none;
         height:auto;
         width:25%;
         float:left;
@@ -30,7 +30,7 @@
 	
 #header {
     background-color:#fff;
-    color:#fff ;
+    color:steelblue;
     padding:5px;
     width:100%;
 	
