--- a/module1.html
+++ b/module1.html
@@ -8,7 +8,7 @@
 
 #nav {
 
-        background-color:none;
+        background-color:steelblue;
         height:auto;
         width:25%;
         float:left;
@@ -49,8 +49,8 @@
 }
 
 .active2{
-		color:red;
-        font-size:70px;
+	color:white;
+        font-size:20px;
         font-family:David;
 
 
@@ -84,6 +84,9 @@
 	
 	
 }
+.color{
+	color:#fff;
+}
 
 </style>
 </head>
@@ -96,14 +99,14 @@
    <p class="active2">
 	   <a name="Module1"></a>
    <a href="#Module1">Module 1<br></a></p>               
-	   <li>Introduction & Fundamentals of C Programming<//li>
+	   <li class="color">Introduction & Fundamentals of C Programming<//li>
    
    
-   <p class="active2"><a href="#Module2">Module 2<br></a> </p><li> Control Structures & Looping</li>
-   <p class="active2"><a href="#Module3">Module 3 <br></a> </p><li>Functions</li>
-   <p class="active2"><a href="#Module4">Module 4<br></a> </p><li>Arrays and Strings</li>
-   <p class="active2"><a href="#Module5">Module 5 <br></a> </p><li>Structure and Union</li>
-   <p class="active2"><a href="#Module6">Module 6 <br></a> </p><li>Pointers</li>
+   <p class="active2"><a href="#Module2">Module 2<br></a> </p><li class="color"> Control Structures & Looping</li>
+   <p class="active2"><a href="#Module3">Module 3 <br></a> </p><li class="color">Functions</li>
+   <p class="active2"><a href="#Module4">Module 4<br></a> </p><li class="color">Arrays and Strings</li>
+   <p class="active2"><a href="#Module5">Module 5 <br></a> </p><li class="color">Structure and Union</li>
+   <p class="active2"><a href="#Module6">Module 6 <br></a> </p><li class="color">Pointers</li>
    </ul>
    </div>
 <div id="header">
