--- a/module1.html
+++ b/module1.html
@@ -39,7 +39,7 @@
 	
 
  .active{
-	color:red;
+	color:#fff;
         font-size:34px;
         font-family:David;
         top:20%;
@@ -93,8 +93,8 @@
 <body>
 
    <div id="nav">
-   <p class="active"> C PROGRAMMING <br>
-	  MODULES<br></p><br>
+   <p class="active"> C PROGRAMMING <br><center>
+	   MODULES</center><br></p><br>
    <ul><br>
    <p class="active2">
 	   <a name="Module1"></a>
