--- a/module1.html
+++ b/module1.html
@@ -93,8 +93,8 @@
 <body>
 
    <div id="nav">
-   <p class="active"> C PROGRAMMING <br><center>
-	   MODULES</center><br></p><br>
+   <p class="active"> C PROGRAMMING <br>
+	   MODULES<br></p><br><br>
    <ul><br>
    <p class="active2">
 	   <a name="Module1"></a>
