--- a/module1.html
+++ b/module1.html
@@ -114,8 +114,15 @@
 <ul>
 	<li class="abcd"><b>Introduction</b></li><br>
 	
-	<p class="ab">C is a procedural programming language. It was initially developed by Dennis Ritchie in the year 1972. It was mainly developed as a system programming language to write an operating system. The main features of C language include low-level access to memory, a simple set of keywords, and clean style, these features make C language suitable for system programmings like an operating system or compiler development.<br>
-Many later languages have borrowed syntax/features directly or indirectly from C language. Like syntax of Java, PHP, JavaScript, and many other languages are mainly based on C language. C++ is nearly a superset of C language (There are few programs that may compile in C, but not in C++).
+	<p class="ab">C is a procedural programming language. It was initially developed
+		by Dennis Ritchie in the year 1972. It was mainly developed as a system programming language to write an operating system. 
+		The main features of C
+		language include low-level access to memory, a simple set of keywords, 
+		and clean style, these features make C language suitable for system 
+		programmings like an operating system or compiler development.<br>
+Many later languages have borrowed syntax/features directly or indirectly from C language.
+		Like syntax of Java, PHP, JavaScript, and many other languages are mainly based on C language. 
+		C++ is nearly a superset of C language (There are few programs that may compile in C, but not in C++).
 
 </p> <img src="Doc2.jpg
 " alt="image" width="300px" height="500px"align="right" >
@@ -132,21 +139,33 @@ Many later languages have borrowed syntax/features directly or indirectly from C
 	
 	<li><b>Introduction to components of a Computer System</b></li><br>
 <p class="ab">
-The main components of the computer system and its function are Processor Main memory Additional memory Input devices Output devices, the processor, auxiliary memory, power supply, and auxiliary equipment. Many components are connected to the main computer board, called the motherboard.
+The main components of the computer system and its function are Processor Main memory Additional
+	memory Input devices Output devices, the processor, auxiliary memory, power supply, and 
+	auxiliary equipment. Many components are connected to the main computer board, called the motherboard.
 
 </p>
 <li><b>Introduction to Algorithm and Flowchart</b></li><br>
 <p class="ab">
-Algorithm and flowchart are the powerful tools for learning programming. An algorithm is a step-by-step analysis of the process, while a flowchart explains the steps of a program in a graphical way. Algorithm and flowcharts helps to clarify all the steps for solving the problem.<br>
+	
+Algorithm and flowchart are the powerful tools for learning programming. 
+	An algorithm is a step-by-step analysis of the process, while a flowchart explains
+	the steps of a program in a graphical way. Algorithm and flowcharts helps to clarify all the steps for solving the problem.<br>
 <br>
 <p class="ab">
 	<li><b>Explain Algorithm and Flowchart with Examples</b></li><br>
 
 	<li><b>Definition of Algorithm</b><br></li>
-<p class="ab">To write a logical step-by-step method to solve the problem is called algorithm, in other words, an algorithm is a procedure for solving problems. In order to solve a mathematical or computer problem, this is the first step of the procedure. An algorithm includes calculations, reasoning and data processing. Algorithms can be presented by natural languages, pseudo code and flowcharts, etc.<br></p>
+<p class="ab">To write a logical step-by-step method to solve the problem is called
+	algorithm, in other words, an algorithm is a procedure for solving problems. 
+	In order to solve a mathematical or computer problem, this is the first step 
+	of the procedure. An algorithm includes calculations, reasoning and data processing. 
+	Algorithms can be presented by natural languages, pseudo code and flowcharts, etc.<br></p>
 
 <li><b>Definition of Flowchart  </b><br></li>
-<p class="ab">A flowchart is the graphical or pictorial representation of an algorithm with the help of different symbols, shapes and arrows in order to demonstrate a process or a program. With algorithms, we can easily understand a program. The main purpose of a flowchart is to analyze different processes. Several standard graphics are applied in a flowchart:<br>
+<p class="ab">A flowchart is the graphical or pictorial representation of an 
+	algorithm with the help of different symbols, shapes and arrows in
+	order to demonstrate a process or a program. With algorithms, we can easily understand a program. 
+	The main purpose of a flowchart is to analyze different processes. Several standard graphics are applied in a flowchart:<br>
 
 </p>
 
@@ -157,14 +176,19 @@ Algorithm and flowchart are the powerful tools for learning programming. An algo
 
      
 	<li><b>Fundamentals of C Programming</b><br></li>
-	<p class="ab">The basic elements used to construct a simple C program are: the C character set, identifiers and keywords, data types, constants, arrays, declarations , expressions and statements. Let us see how these elements can be combined to form more comprehensive program components-</p>
+	<p class="ab">The basic elements used to construct a simple C program are:
+		the C character set, identifiers and keywords, data types, constants, 
+		arrays, declarations , expressions and statements. Let us see how these elements 
+		can be combined to form more comprehensive program components-</p>
 	
 	
 	
 	
 	
 	<li><b>Keywords</b><br></li>
-	<p class="ab">   Keywords are predefined, reserved words used in programming that have special meanings to the compiler. Keywords are part of the syntax and they cannot be used as an identifier. For example:</p>
+	<p class="ab">   Keywords are predefined, reserved words used in programming
+		that have special meanings to the compiler. Keywords are part of the syntax
+		and they cannot be used as an identifier. For example:</p>
 	
 	
 	<br>
@@ -180,7 +204,10 @@ C Keywords<br><br>
 	
 <li><b>Identifiers </b><br></li>
 	
-	<p class="ab">In C, C++, C# and other programming languages, an identifier is a name that is assigned by the user for a program element such as variable, type, template, class, function or namespace. It is usually limited to letters, digits, and underscores. ... Identifiers are used to identify a program element in the code<br></p>
+	<p class="ab">In C, C++, C# and other programming languages, an identifier is a
+		     name that is assigned by the user for a program element such as variable, type,
+		     template, class, function or namespace. It is usually limited to letters, digits, and underscores
+		     ... Identifiers are used to identify a program element in the code<br></p>
 	 <img src="iden.jpg" alt="image" width="600px" height= 250px" align="right" >
 	
 	
