--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
 .a{
     height: 60px;
-    background-color:darkslategray;
-    background-color:darkslategray;
-    color: ;
+    border:3px solid steelblue;
     padding:10px;
     
 }
@@ -118,7 +116,7 @@
         <div class="container-fluid a">
 
             <div class="btn-group">
-                <button type="button" class="btn btn-danger dropdown-toggle " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-info dropdown-toggle " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Click here
                 </button>
                 <div class="dropdown-menu">
